--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <title>Ava GoGo: Social DeFi Community</title>
 
+    <meta name="theme-color" content="#EE4A84">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 
