--- a/public/tour/index.html
+++ b/public/tour/index.html
@@ -7,19 +7,19 @@
 		<title>Ava Gogo: Social DeFi Tour</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="author" content="Ava's DAO">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="https://avagogo.io/tour/dist/reset.css">
+		<link rel="stylesheet" href="https://avagogo.io/tour/dist/reveal.css">
+		<link rel="stylesheet" href="https://avagogo.io/tour/dist/theme/black.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="https://avagogo.io/tour/plugin/highlight/monokai.css">
 	</head>
 
 	<body>
@@ -32,9 +32,9 @@
 					<a href="https://revealjs.com">
 						<img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					</a>
-					<h3>Ava GoGo: Social DeFi Tour</h3>
+					<h3>Ava GoGo: A Social DeFi Tour</h3>
 					<p>
-						<small>Created by <a href="https://twitter.com/ShomariPrince" target="_blank">Shomari</a></small>
+						<small>Created by <a href="https://twitter.com/AvaGoGoDeFi" target="_blank">Ava Nakamoto</a></small>
 					</p>
 				</section>
 
@@ -450,12 +450,12 @@ Reveal.on( 'customevent', function() {
 
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/zoom/zoom.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/search/search.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="https://avagogo.io/tour/dist/reveal.js"></script>
+		<script src="https://avagogo.io/tour/plugin/zoom/zoom.js"></script>
+		<script src="https://avagogo.io/tour/plugin/notes/notes.js"></script>
+		<script src="https://avagogo.io/tour/plugin/search/search.js"></script>
+		<script src="https://avagogo.io/tour/plugin/markdown/markdown.js"></script>
+		<script src="https://avagogo.io/tour/plugin/highlight/highlight.js"></script>
 		<script>
 
 			// Also available as an ES module, see:
